--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:focusableInTouchMode="true"
-    tools:context="com.example.robin.androidproject4.ChatActivity">
+    tools:context=".view.ChatActivity">
 
     <ListView
         android:id="@+id/listView"
@@ -22,16 +22,24 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#eee"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
 
         <EditText
             android:id="@+id/chat_textfield"
             android:hint="@string/chat_message_hint"
-            android:layout_width="match_parent"
+            android:layout_width="238dp"
             android:layout_height="wrap_content"
-            android:gravity="bottom"/>
+            android:gravity="bottom"
+            android:layout_weight="0.80" />
+
+        <ImageButton
+            android:id="@+id/gallery_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.20"
+            android:src="@android:drawable/ic_menu_gallery" />
 
     </LinearLayout>
 </RelativeLayout>
