--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,12 +11,13 @@
     tools:context=".view.ChatActivity">
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/history_list_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="top"/>
+        android:layout_gravity="top"
+        android:layout_above="@+id/linearLayout" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -24,12 +25,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:id="@+id/linearLayout">
 
         <EditText
-            android:id="@+id/chat_textfield"
+            android:id="@+id/textfield"
             android:hint="@string/chat_message_hint"
-            android:layout_width="238dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="bottom"
             android:layout_weight="0.80" />
@@ -40,6 +42,13 @@
             android:layout_height="match_parent"
             android:layout_weight="0.20"
             android:src="@android:drawable/ic_menu_gallery" />
+
+        <Button
+            android:id="@+id/send_button"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chat_send_button_text" />
 
     </LinearLayout>
 </RelativeLayout>
