--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -40,14 +40,15 @@
             android:id="@+id/gallery_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="0.20"
+            android:layout_weight="0.10"
             android:src="@android:drawable/ic_menu_gallery" />
 
         <Button
             android:id="@+id/send_button"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.10"
             android:text="@string/chat_send_button_text" />
 
     </LinearLayout>
