--- a/app/src/main/res/menu/menu_contact_list.xml
+++ b/app/src/main/res/menu/menu_contact_list.xml
@@ -4,9 +4,9 @@
 
     <item
         android:id="@+id/menu_add_contact"
+        android:title="@string/menu_add_contact_text"
         android:icon="@drawable/ic_person_add_white_48dp"
-        android:title="Add contact"
-        app:showAsAction="always">
+        app:showAsAction="ifRoom">
     </item>
     <item
         android:id="@+id/menu_settings"
