Add dialog for adding new contact.

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -12,5 +12,5 @@
 
     <Preference
         android:enabled="false"
-        android:title="@string/copyright"/>
+        android:title="@string/settings_copyright"/>
 </PreferenceScreen>
