--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,10 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
     android:focusableInTouchMode="true"
     tools:context=".view.ChatActivity">
 
@@ -17,16 +15,16 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="top"
-        android:layout_above="@+id/linearLayout" />
+        android:layout_above="@+id/message_area" />
 
     <LinearLayout
+        android:id="@+id/message_area"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:weightSum="1"
-        android:id="@+id/linearLayout">
+        android:weightSum="1" >
 
         <EditText
             android:id="@+id/textfield"
