--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -37,14 +37,24 @@
             android:gravity="bottom"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/gallery_button" />
+            android:layout_toStartOf="@+id/gallery_button_add_attachment" />
 
 
         <ImageButton
-            android:id="@+id/gallery_button"
+            android:id="@+id/gallery_button_add_attachment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_menu_gallery"
+            android:layout_toStartOf="@+id/send_button"
+            android:layout_alignBottom="@+id/textfield"
+            android:layout_alignParentTop="true" />
+
+        <ImageButton
+            android:id="@+id/gallery_button_delete_attachment"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_delete"
             android:layout_toStartOf="@+id/send_button"
             android:layout_alignBottom="@+id/textfield"
             android:layout_alignParentTop="true" />
@@ -57,7 +67,7 @@
             android:text="@string/chat_send_button_text"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignBottom="@+id/gallery_button" />
+            android:layout_alignBottom="@+id/gallery_button_add_attachment" />
 
     </RelativeLayout>
 
