--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -37,7 +37,7 @@
             android:gravity="bottom"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/gallery_button_add_attachment" />
+            android:layout_toStartOf="@+id/camera_button" />
 
 
         <ImageButton
@@ -45,9 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_menu_gallery"
-            android:layout_toStartOf="@+id/send_button"
-            android:layout_alignBottom="@+id/textfield"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:layout_toStartOf="@+id/send_button" />
 
         <ImageButton
             android:id="@+id/gallery_button_delete_attachment"
@@ -55,9 +54,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_delete"
-            android:layout_toStartOf="@+id/send_button"
-            android:layout_alignBottom="@+id/textfield"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:layout_toStartOf="@+id/send_button" />
+
+        <ImageButton
+            android:id="@+id/camera_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_camera"
+            android:layout_alignParentTop="true"
+            android:layout_toStartOf="@+id/gallery_button_add_attachment" />
 
         <Button
             android:id="@+id/send_button"
@@ -65,9 +71,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/chat_send_button_text"
-            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignBottom="@+id/gallery_button_add_attachment" />
+            android:layout_alignParentTop="true" />
 
     </RelativeLayout>
 
