--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -41,7 +41,7 @@
 
 
         <ImageButton
-            android:id="@+id/gallery_button_add_attachment"
+            android:id="@+id/gallery_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_menu_gallery"
@@ -49,7 +49,7 @@
             android:layout_toStartOf="@+id/send_button" />
 
         <ImageButton
-            android:id="@+id/gallery_button_delete_attachment"
+            android:id="@+id/delete_attachment_button"
             android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_menu_camera"
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/gallery_button_add_attachment" />
+            android:layout_toStartOf="@+id/gallery_button" />
 
         <Button
             android:id="@+id/send_button"
