--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -37,42 +37,50 @@
             android:gravity="bottom"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/camera_button" />
+            android:layout_toStartOf="@+id/buttons" />
 
-
-        <ImageButton
-            android:id="@+id/gallery_button"
+        <LinearLayout
+            android:id="@+id/buttons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_gallery"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/send_button" />
+            android:layout_alignParentEnd="true">
 
-        <ImageButton
-            android:id="@+id/delete_attachment_button"
-            android:visibility="invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_delete"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/send_button" />
+            <ImageButton
+                android:id="@+id/camera_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_camera"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/gallery_button" />
 
-        <ImageButton
-            android:id="@+id/camera_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_camera"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/gallery_button" />
+            <ImageButton
+                android:id="@+id/gallery_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_gallery"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/send_button" />
 
-        <Button
-            android:id="@+id/send_button"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/chat_send_button_text"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true" />
+            <ImageButton
+                android:id="@+id/delete_attachment_button"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_delete"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/send_button" />
+
+            <Button
+                android:id="@+id/send_button"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/chat_send_button_text"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true" />
+        </LinearLayout>
 
     </RelativeLayout>
 
